# minstrel

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: interval.rs  key.rs  lib.rs  mode.rs  note.rs
